docs/artifacts/multi-source-tasks/localtasksource-red-compile-error.txt
TDD RED Phase - LocalTaskSource Tests Compile Failure
======================================================

Date: 2026-01-15 09:59
Test File: TimeBox/TimeBoxTests/LocalTaskSourceTests.swift
Command: xcodebuild test -scheme TimeBox -destination 'platform=iOS Simulator,name=iPhone 17 Pro' -only-testing:TimeBoxTests/LocalTaskSourceTests

COMPILE ERROR (Expected - LocalTaskSource not yet implemented):

/Users/hem/Documents/opt/my-daily-sprints/TimeBox/TimeBoxTests/LocalTaskSourceTests.swift:9:17: error: cannot find type 'LocalTaskSource' in scope
    var source: LocalTaskSource!
                ^~~~~~~~~~~~~~~

** TEST FAILED **

This is the expected TDD RED result. The tests cannot compile because:
1. LocalTaskSource class does not exist

Next Step: Implement LocalTaskSource in Sources/Services/TaskSources/LocalTaskSource.swift (TDD GREEN)
